[package]
name = "sting"
version = "0.1.5"
edition = "2024"
authors = ["Andres Osorio <af.osorio1341@gmail.com>"]
license = "MIT"
description = "A simple command line tool to analyze an typescript project"
readme = "README.md"
repository = "https://github.com/anfelo/sting"
keywords = ["cli", "typescript", "command-line-utilities", "rust"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.15"
